WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145855
Overriding the overlay scrollbar style on WKView doesn't take effect immediately
https://bugs.webkit.org/show_bug.cgi?id=145855
Summary
Overriding the overlay scrollbar style on WKView doesn't take effect immediately
Beth Dakin
Reported
2015-06-10 14:22:26 PDT
If the scrollbar style is changed dynamically after the WKView is loaded, then the new style won't actually change until rubber-banding.
rdar://problem/20948706
Attachments
Patch
(4.99 KB, patch)
2015-06-10 14:42 PDT
,
Beth Dakin
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2015-06-10 14:42:59 PDT
Created
attachment 254677
[details]
Patch
Simon Fraser (smfr)
Comment 2
2015-06-10 14:44:19 PDT
Comment on
attachment 254677
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=254677&action=review
> Source/WebCore/platform/mac/ScrollAnimatorMac.mm:1020 > + if (!painter) > + return; > + [painter setNeedsDisplay:YES];
It would be OK removing the null check, since messaging nil is OK.
Beth Dakin
Comment 3
2015-06-10 14:54:57 PDT
(In reply to
comment #2
)
> Comment on
attachment 254677
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=254677&action=review
> > > Source/WebCore/platform/mac/ScrollAnimatorMac.mm:1020 > > + if (!painter) > > + return; > > + [painter setNeedsDisplay:YES]; > > It would be OK removing the null check, since messaging nil is OK.
Good point. Removed! Thanks, Simon!
http://trac.webkit.org/changeset/185431
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug