Overriding the overlay scrollbar style on WKView doesn't take effect immediately https://bugs.webkit.org/show_bug.cgi?id=145855 -and corresponding- rdar://problem/20948706

Reviewed by Simon Fraser.

Since we opt into layer-per-part scrollbars in order to move the knob on the
secondary thread, AppKit is creating its own layers for the knob and track. To
invalidate them, we need to call into the ScrollbarPainter’s setNeedsDisplay.

New virtual function on ScrollAnimator to call into ScrollbarPainter’s
setNeedsDispay.
* platform/ScrollAnimator.h:

Call the new function when setting the overlay style.
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::setScrollbarOverlayStyle):

Add setNeedsDisplay to the list of ScrollbarPainter methods.
* platform/mac/NSScrollerImpDetails.h:

Implement invalidateScrollbarPartLayers.
* platform/mac/ScrollAnimatorMac.h:
* platform/mac/ScrollAnimatorMac.mm:
(WebCore::ScrollAnimatorMac::invalidateScrollbarPartLayers):



Canonical link: https://commits.webkit.org/163901@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185431 268f45cc-cd09-0410-ab3c-d52691b4dbfc